<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".CreateAccount">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:textColor="@color/colorAccent"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/colorAccent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/bt_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/createaccount"
        android:textColor="@color/colorAccent"
        />

</LinearLayout>