<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true"
    android:focusable="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:elevation="10dp"
        android:alpha="0.8"
        android:padding="4dp"
        android:background="@color/centerGColor"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/journal_user_name"
        android:text="Ritik Sinha"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:textSize="17sp"
        android:textColor="@color/colorAccent"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/journal_share_button"
        android:layout_width="wrap_content"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_menu_share"
        android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

     <ImageView
         android:id="@+id/journal_image_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
         android:cropToPadding="true"
         android:adjustViewBounds="true"
         android:src="@drawable/delhi"
         android:contentDescription="@string/journalimage" />

        <TextView
            android:id="@+id/journal_title_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:text="@string/journal_title_list"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/journal_thought_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorAccent"
            android:text="@string/journal_thought_list"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/journal_timestamp_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_created"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorAccent"
            android:textStyle="italic"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>