<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".PostJournalActivity">


    <EditText
        android:id="@+id/post_title_et"
        android:layout_width="383dp"
        android:layout_height="48dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:textColor="@color/colorAccent"
        android:hint="@string/post_title_hint"
        android:background="@drawable/input_outline"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_imageview" />

    <ImageView
        android:id="@+id/post_imageview"
        android:layout_width="405dp"
        android:layout_height="260dp"
        android:layout_marginEnd="4dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/clouds_sky_overcast" />

    <TextView
        android:id="@+id/post_username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="192dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/Username"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_imageview" />

    <TextView
        android:id="@+id/post_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="22dp"
        android:text="@string/Date"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/post_imageview"
        app:layout_constraintStart_toStartOf="@+id/post_imageview" />

    <ImageView
        android:id="@+id/post_camera_bt"
        android:layout_width="95dp"
        android:layout_height="73dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="156dp"
        app:layout_constraintBottom_toTopOf="@+id/post_username_textview"
        app:layout_constraintEnd_toEndOf="@+id/post_imageview"
        app:layout_constraintTop_toTopOf="@+id/post_imageview"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/post_thought_et"
        android:layout_width="383dp"
        android:layout_height="100dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:textSize="24sp"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:hint="@string/post_thought_hint"
        android:inputType="textMultiLine"
        android:textStyle="bold"
        android:background="@drawable/input_outline"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_imageview" />

    <ProgressBar
        android:id="@+id/post_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_thought_et" />

    <Button
        android:id="@+id/post_save_thought_bt"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="104dp"
        android:background="@android:color/transparent"
        android:text="Save"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_thought_et" />

</androidx.constraintlayout.widget.ConstraintLayout>